Added SMTP Notifications (#532)